# synapforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_V42.md  LICENSE  MANIFEST.in  README.md  auto_ckpt_backup.py  auto_rsync_ckpt.py  chat_demo.json  conftest.py  pyproject.toml  setup.py  train_100m.py  train_100m_kd.py  train_100m_rl.py  train_100m_self_distill.py  train_100m_sft.py  train_v15_full.py
.github/workflows/: release.yml  test.yml
benchmarks/: bench_ternary.py  bench_triton.py  test_distributed_smoke.py  test_scale_throughput.py  test_single_gpu_baseline.py
docs/: 3D.md  3D_PLAN.md  ANTI_LORA.md  ARCHITECTURE.md  ARCHIVE_NEW_PAPERS.md  ASYNC_INTERACTIVE_KERNEL.md  AUTO_EVAL.md  BACKUP.md  BASELINE_COMPARISON.md  BASELINE_COMPARISON_LIVE.md  BENCHMARKS.md  CHAT_PROTOCOL.md  CHAT_SAMPLES.md  CONTEXT_SCALING.md  CONTINUAL_LEARNING.md  COVERAGE.md  DATA_EXPANSION.md  DATA_QUALITY_REPORT.json  DATA_QUALITY_REPORT.md  DATA_SOURCES.md  DECORATIVE_AUDIT.json  DECORATIVE_AUDIT.md  DECORATIVE_TO_REAL.md  DEEP_MAINT_QUEUE.md  DEMO_VIDEO_SCRIPT.md  EVAL_DATA.md  HISTORY_ISSUES.md  HONEST_ASSESSMENT.md  HYBRID_CPU_GPU_TRAINING.md  INDEX.md  INSURANCE_NATIVE.md  INTEGRATION_TESTS.md  INTRINSIC_SELF_DRIVE.md  INVESTOR.md  MASTER_PLAN.md  MATMUL_FREE.md  MOE_AUDIT.md  MONITOR_AND_CPU_JOBS.md  MONOTONIC_QUALITY.md  MULTIMODAL_DATA.md  (+68 more)
docs/_chat_raw/: chat_run3m_010750.json
examples/: 01_hello.py  02_train_lnn.py  03_plasticity.py  04_triton_speedup.py  05_distributed.py  legacy_example_optim.py  legacy_example_plasticity.py  mixed_device_training.py
legacy/: README.md  synapforge_train.py  train_100m.py  train_3d.py  train_full_modal.py  train_multimodal.py  train_native_unified.py  train_v15_full.py  train_v16_unified.py  train_v18_full_self.py  train_v42_universal.py
outreach/: README.md  hn_post.md  twitter_thread.md
paper/: draft.tex  section4_auto.tex
scripts/: assemble_quality_corpus.py  audit_decorative_features.py  audit_rental_data.py  audit_security_ast.py  auto_eval_daemon.py  auto_pretrain_to_sft.py  backup_v41.sh  baseline_smollm2_compare.py  bench_aux_async.py  bench_fused_hybrid.py  bench_hybrid_block.py  bench_long_context_inference.py  bench_modal_packing.py  bench_self_drive.py  bench_spike_pack.py  bench_stdp_vs_adamw.py  bench_throughput.py  bench_torch_compile.py  build_diverse_corpus.py  build_kd_prompts.py  build_next_launch.py  changelog_helper.py  chat_eval_gate.py  chat_repl.py  check_doc_stamps.py  ckpt_cleanup.sh  collect_kd_data.py  cpu_jobs_minimal.sh  cpu_pilot_inference_stdp.py  cpu_utilization_jobs.sh  curriculum_sort.py  data-smoke.sh  ddp_launch.py  demo_multi_user_chat.py  download_alpaca.sh  download_eval_data.sh  download_eval_extended.sh  download_multimodal_extended.sh  download_multimodal_real.sh  download_pretrain_multilingual.sh  (+72 more)
synapforge/: README.md  __init__.py  __init__.py.bak_pre_action  adversarial.py  bench_cpu_avx2.py  bench_mfu.py  bench_mfu_profile.py  bench_mfu_roofline.py  bench_mfu_roofline.txt  bench_results.txt  bench_surrogate.py  bench_ternary.py  bench_triton.py  curiosity.py  data.py  defense.py  distill.py  distributed.py  distributed_hetero.py  distributed_ray.py  example_mscfc_port.py  example_optim.py  finetune.py  hf_trainer.py  huggingface_adapter.py  infinite.py  interop_torch.py  intrinsic.py  latent_thinking.py  long.py  model_100m.py  module.py  mscfc_port.py  native_demo.py  native_demo_torch_ref.py  optim.py  parallel.py  phase_signal.py  plasticity.py  quantize.py  (+33 more)
synapforge/action/: __init__.py  actuator.py  compositional_codebook.py  envs.py  head.py  hnsw_skill_index.py  neuromcp.py  per_domain_neuromcp.py  skill_log.py  skill_log_v2.py  skill_synthesizer.py  universal_codebook.py  web_actuator.py  web_env.py
synapforge/backends/: __init__.py  base.py  cpu_avx2.py  cpu_event.py  gpu_dense.py  lava_export.py  triton_block.py  triton_block_kernel.py  triton_block_kernel_bwd.py  triton_fused_backward.py
synapforge/bench/: __init__.py  agieval_zh.py  ceval.py  cmmlu.py  compare_pytorch.py  gsm8k.py  gsm8k_zh.py  hellaswag.py  humaneval.py  lambada.py  mbpp.py  mmlu.py
synapforge/bio/: __init__.py  astrocyte.py  kwta.py  learnable_threshold.py  multiband.py  predictive.py  stdp_fast.py  tau.py
synapforge/cells/: liquid.py  plif.py  rfold.py  synapse.py  synapse.py.bak_pre_mfu_opt1
synapforge/chat/: __init__.py  event_loop.py  interrupt_policy.py  proactive.py  streaming.py  turn_taking.py
synapforge/configs/: __init__.py  synap1.py
synapforge/data/: __init__.py  async_pipeline.py  remote_warehouse.py  tool_use_traces.py  web_daemon_sink.py
synapforge/defense/: __init__.py  gates.py  poison_detector.py  provenance.py  weight_firewall.py
synapforge/demo/: __init__.py  async_chat_cli.py  async_chat_demo.transcript.jsonl  chat_demo.py  chat_recorded.json  cli.py  disclose.py  four_button.py  qwen_lora_demo.py  rfold_bench.py  stdp_demo.py
synapforge/eval/: compare_chat.py  curiosity_gates.py  generate.py  niah.py
synapforge/examples/: 06_computer_use.py
synapforge/inference/: __init__.py  coconut_loop.py  rfold_chat.py
synapforge/interactive/: __init__.py  async_chat.py  listener.py  proactive_trigger.py  streaming.py  turn_taking.py
synapforge/intrinsic/: __init__.py  _core.py  frontier.py  quality_guard.py  self_drive_coordinator.py
synapforge/ir/: __init__.py  compiler.py  graph.py  synaptogenesis.py
synapforge/kernels/: __init__.py  sparse_spike_matmul.py  spike_pack.py
synapforge/learn/: __init__.py  autonomous_daemon.py  continual_daemon.py  curriculum_loader.py  ema.py  retrieval_memory.py  web_curriculum.py  web_curriculum_500.json
synapforge/memory/: __init__.py  bm25_sidecar.py  dual_path_gate.py  multitau_plif_binder.py  trained_pq_codebook.py
synapforge/modal/: __init__.py  audio.py  biosignal.py  byte_patch.py  graph.py  image.py  point_cloud.py  screen.py  (+4 more)
tests/: test_audit_decorative_features.py  test_correctness.py  test_plasticity.py  test_run8_full_launcher_flags.py  test_surrogate.py  test_ternary.py  test_web_self_learn_daemon.py
(+236 files in other folders)
